fix logotype gallery on small screens

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ a {
 
 .logotype {
 	height: 2rem;
+	object-fit: contain;
 }
 
 .hero {
@@ -439,5 +440,9 @@ footer > nav > a:hover {
 	.staff-list .role {
 		margin-top: 1.5rem;
 		text-align: center;
+	}
+
+	.logotype-gallery {
+		flex-direction: column;
 	}
 }
